--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title> Celiac Compass </title>
+    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito:300,300i,400,400i,600,600i,700,700i|Playfair+Display:400,400i,700,700i|Roboto&display=swap" rel="stylesheet">
   </head>
+
   <body>
-    <h1>
-      Celiac Compass  
-    </h1>
+
   </body>
+
 </html>
