added css styles
styles added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
   </head>
 
   <body>
+    <section class="bg-img tall-50 grid-middle-right" style="background-image: url(/images/bali.jpg)">
+    <div>
+    <h1>
+      Bali
+    </h1>
+    <p>
+      Place of the Gods
+    </p>
+      </div>
 
+    </section>
+    <section class="dark-section centered">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+        <a class="btn"> click me </a>
+    </section>
+    <section>
+        <a href= "click me"> Click Me </a>
+        <a class="btn"> click me </a>
+          <a class="dark-section btn"> click me </a>
+    </section>
   </body>
 
 </html>
