--- a/contact.html
+++ b/contact.html
@@ -26,25 +26,13 @@ title: Contact Us
     </form>
   </div>
 </section>
-
-
-
-  <div class="col-4_sm-12 padded">
+<section>
+  <div class="col-4_sm-12 padded pitch">
     <form action="" method="post">
       <h2> Pitch Us </h2>
-      <p> hello, my name is <input type="text" name="name" placeholder="bruce">. and </p>
-
-    </form>
-    <p>""
-
-
-      <input type="text" name="name" placeholder="Your Name">
-
-        <input type="email" name="_replyto" placeholder="Your Email">
-
-        <textarea placeholder="Your Message"></textarea>
-        <input type="submit" value="Send" class="button">
-      </div>
-    </form>
+      <p> hello, my name is <input type="text" name="name" placeholder=" Your Name ">. and my email address is    <input type="email" name="_replyto" placeholder="Your Email"> and I would like to discuss this project <textarea placeholder="this project"> </textarea> </p>
+      <p>
+      <input type="submit" value="Send" class="button">
+      </p>
   </div>
 </section>
