--- a/_destinations/bali.html
+++ b/_destinations/bali.html
@@ -1,7 +1,7 @@
 ---
 layout: destinations
 title: Bali
-destination: bali
+destination: Bali
 subtitle: Island of the Gods
 tips:
   - content_html: >-
@@ -49,8 +49,9 @@ areas:
       est laborum.
     featured_image: /images/ubud.jpg
 restaurants:
-  - name: Fair Trade Bali
+  - name: Fair Warung Bale
     subtitle: Lorem dolor
+    url: /restaurants/fair-warung
     description: >-
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -82,7 +83,8 @@ cuisine:
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
     image: /images/ubud.jpg
-  - name: Lorem ipsum
+    url: /cuisines/gado-gado
+  - name: Mahi Mahi
     description: >-
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -91,6 +93,7 @@ cuisine:
       velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
+    url: /cuisines/mahi-mahi
     image: /images/ubud.jpg
 contributers:
   - name: Joe
@@ -103,4 +106,3 @@ contributers:
     featured_image:
     url:
 ---
-
