--- a/_destinations/bali.html
+++ b/_destinations/bali.html
@@ -106,3 +106,6 @@ contributers:
     featured_image:
     url:
 ---
+
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-5f6d4fc4-c291-4dc5-a52a-acb16cf949d1"></div>
