last changes for website
last changes

--- a/_destinations/bali.html
+++ b/_destinations/bali.html
@@ -47,7 +47,7 @@ areas:
       velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
-    featured_image: /images/ubud.jpg
+    featured_image: /images/seminyak.jpeg
 restaurants:
   - name: Fair Warung Bale
     subtitle: Lorem dolor
@@ -60,7 +60,7 @@ restaurants:
       velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
-    image: /images/ubud.jpg
+    image: /images/fair-warung3.jpeg
   - name: Motel Mexicola
     subtitle: Lorem ipsum dolor
     description: >-
@@ -71,7 +71,7 @@ restaurants:
       velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
-    image: /images/ubud.jpg
+    image: /images/motel-mexicola.jpg
 cuisine:
   - name: Gado-gado (Lotek)
     description: >-
@@ -94,7 +94,7 @@ cuisine:
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
     url: /cuisines/mahi-mahi
-    image: /images/ubud.jpg
+    image: /images/tuna.jpg
 contributers:
   - name: Joe
     featured_image:
